--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,6 +125,7 @@ generate env files:
   rules:
     - if: $CI_COMMIT_BRANCH =~ /ci\/test-.*/
       when: never
+    - when: on_success
 
 codegen:
   stage: codegen
