--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,11 @@
         "@nx/vitest:test": {
             "cache": true,
             "inputs": ["default", "^production"]
+        },
+        "@nx/esbuild:esbuild": {
+            "cache": true,
+            "dependsOn": ["^build"],
+            "inputs": ["production", "^production"]
         }
     },
     "namedInputs": {
