--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@t3-oss/env-core": "^0.13.10",
         "@tailwindcss/vite": "^4.1.18",
         "axios": "^1.13.2",
+        "chokidar": "^5.0.0",
         "clsx": "^2.1.1",
         "color": "^5.0.3",
         "dotenv": "^17.2.3",
